<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/LayoutDeleteAlert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transp_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transp_color">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_delete_data"
            android:fontFamily="@font/original_surfer"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_delete"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toStartOf="@+id/noButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warning" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/yesButton"
            app:layout_constraintTop_toBottomOf="@+id/warning" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>