<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="noteData"
            type="com.example.amotion.editing.EditNoteViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/doneButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/savingedit"/>


<!--    <ImageButton-->
<!--        android:id="@+id/backButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/ic_arrow_back_black_24dp"-->
<!--        android:backgroundTint="@color/black"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


    <EditText
        android:id="@+id/titleEditText"
        style="@style/Custom_Edit_Texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        android:text="@{noteData.currentNote.title}"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/subTitleEditText"
        style="@style/Custom_Edit_Texts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/subtitle_hint"
        android:inputType="textPersonName"
        android:text="@{noteData.currentNote.subtitle}"
        android:textColor="#C5E1A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEditText" />

    <EditText
        android:id="@+id/contentEditText"
        style="@style/Custom_Edit_Texts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="start|top"
        android:hint="@string/text_hint"
        android:inputType="textMultiLine"
        android:text="@{noteData.currentNote.text}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitleEditText"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>